--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,16 @@
     height: 5rem;
     background-color: #faf9f9;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding-left: 2rem;
+    padding: 2rem;
+}
+
+.logoContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
 }
 
 .logo__text {
@@ -13,9 +21,34 @@
     background: linear-gradient(#cd9fe7, #61eade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-left: 2rem;
+    /*margin-left: 2rem;*/
 }
 
 .img {
     width: 4rem;
+}
+
+.loginNavLink {
+    font-family: Saira, sans-serif;
+    color: #61eade;
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.authUserContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+
+.headerName {
+    font-size: 1.5rem;
+    color: #61eade;
+    font-weight: bold;
+}
+
+.avatar {
+    width: 3rem;
 }
