--- a/src/components/common/FormsControllers/FormsControllers.module.css
+++ b/src/components/common/FormsControllers/FormsControllers.module.css
@@ -1,15 +1,30 @@
 .formControl {
-    /*height: 5rem;*/
+    width: 20rem;
+    z-index: 5;
+    border: solid #b5e4e5 2px;
+    border-radius: 0.4rem;
 }
 
 .formControl.error {
-    border: solid red 1px;
-    border-radius: 1rem;
-
+    width: 20rem;
+    border: solid #e77e7e 2px;
+    border-radius: 0.4rem;
+    z-index: 5;
 }
 
 .textarea {
     width: 100%;
     height: 5rem;
-    border-radius: 1rem;
+    border-radius: 0.4rem;
+}
+
+.input {
+    border: none;
+    height: 2rem;
+    width: 19.8rem;
+    border-radius: 0.4rem;
+}
+
+.validateForm {
+    text-align: left;
 }
