--- a/src/components/common/Input/InputChangePhoto.module.css
+++ b/src/components/common/Input/InputChangePhoto.module.css
@@ -1,3 +1,6 @@
+.edit {
+    grid-area: C;
+}
 .my {
     width: 1rem;
     height: 1rem;
@@ -5,6 +8,7 @@
     overflow: hidden;
     position: absolute;
     z-index: -1;
+    /*grid-area: C*/
 }
 
 .label {
@@ -18,6 +22,7 @@
     transition: all 0.18s ease-in-out;
     border: 1px solid #333;
     color: #333;
+    /*grid-area: C;*/
 }
 
 .label:hover {
