--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,18 +1,3 @@
-.nav {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    color: #c5c4c4;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    grid-area: n;
-    /*background-color: #fff;*/
-    background-color: #faf9f9;
-    border-radius: 2rem;
-    padding: 1rem;
-    /*height: 18rem;*/
-}
-
 .nav__item {
     margin-top: 1rem;
 }
@@ -22,7 +7,7 @@
 }
 
 .nav__item:hover .span {
-    color: #6b6bf1;
+    color: var(--backlight-text-color);
 }
 
 .nav__itemLinkInactiveLink {
@@ -30,7 +15,7 @@
     flex-direction: row;
     align-items: center;
     text-decoration: none;
-    color: #c5c4c4;
+    color: var(--secondary-text-color);
 }
 
 .nav__itemLinkActiveLink {
@@ -38,15 +23,15 @@
     flex-direction: row;
     align-items: center;
     text-decoration: none;
-    color: #61eade;
+    color: var(--backlight-text-color)
 }
 
 
 
 .nav__itemImage {
-    width: 2rem;
+    width: 3rem;
     padding: 0.4rem;
-    background-image: linear-gradient(to right top, #cd9fe7, #61eade);
+    background-image: var(--first-gradient);
     border-radius: 2rem;
 }
 
@@ -55,16 +40,3 @@
     text-align: left;
 }
 
-.siteBar {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-}
-
-.friends {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
