--- a/src/components/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo.module.css
@@ -3,48 +3,79 @@
 .background__profile {
     position: relative;
     left: 50%;
-    width: 92%;
+    width: 100%;
     border-radius: 2rem;
-    /*background-image: url("../../images/backgroundProfile.svg");*/
-    background-image: linear-gradient(to right top, #cd9fe7, #61eade);
+    background-image: var(--first-gradient);
     object-fit: cover;
-    height: 20rem;
-    transform: translate(-50%, 10%);
+    height: 24rem;
+    transform: translateX(-50%);
 }
-
-.profile {
-    position: relative;
-    display: grid;
-    grid-template-areas:
-    "A A A B B B B B B B C C C";
+.wrapperProfile {
+    display: flex;
     flex-direction: row;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 5rem;
+}
+.profile {
+    /*position: relative;*/
+    display: flex;
+    /*grid-template-areas:*/
+    /*"A A A B B B B B B B";*/
+    flex-direction: row;
+    align-items: end;
     /*justify-content: center;*/
     justify-items: center;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 92%;
+    /*left: 50%;*/
+    transform: translateY(-5rem);
+    /*width: 92%;*/
+    gap: 2rem;
+    /*padding-left: 4rem;*/
 }
 
 .avatar {
     z-index: 2;
-    width: 10rem;
+    width: 14rem;
     border-radius: 10rem;
-    border: #fff 0.5rem solid;
+    border: var(--foreground-color) 0.4rem solid;
     grid-area: A;
 }
 
 .description {
-    font-family: "Saira", "Roboto", sans-serif;
-    grid-area: B;
+    padding-bottom: 1.5rem;
 }
-
-.description p {
-    color: #c5c4c4;
-}
-
 .description h3 {
-    font-family: "Saira", "Rowdies", sans-serif;
+    font-family: "Saira", "Roboto", sans-serif;
     font-weight: 800;
     font-size: 2rem;
+    color: var(--primary-text-color)
+}
+
+.editProfile {
+    transform: translateY(-1rem)
+}
+.btnEditProfile {
+    width: 12rem;
+    height: 4rem;
+    border-radius: 1.2rem;
+    text-align: center;
+    cursor: pointer;
+    display: block;
+    font: 14px/50px Tahoma;
+    transition: all 0.18s ease-in-out;
+    /*border: 1px solid #333;*/
+    border: none;
+    color: var(--primary-text-color);
+    background-color: var(--background-color);
+    font-family: Saira, sans-serif;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.btnEditProfile:hover {
+    color: var(--background-color);
+    background: var(--primary-text-color);
+    cursor: pointer;
+    transition: all 0.18s ease-in-out;
+
 }
