--- a/src/components/common/FormsControllers/FormsControllers.module.css
+++ b/src/components/common/FormsControllers/FormsControllers.module.css
@@ -1,7 +1,8 @@
 .formControl {
     width: 20rem;
     z-index: 5;
-    border: solid #b5e4e5 2px;
+    /*color: var(--foreground-color);*/
+    /*border: solid #b5e4e5 2px;*/
     border-radius: 0.4rem;
 }
 
@@ -16,6 +17,8 @@
     width: 100%;
     height: 5rem;
     border-radius: 0.4rem;
+    background-color: var(--background-color);
+    color: var(--primary-text-color)
 }
 
 .input {
@@ -23,6 +26,8 @@
     height: 2rem;
     width: 19.8rem;
     border-radius: 0.4rem;
+    background-color: var(--background-color);
+    color: var(--primary-text-color)
 }
 
 .validateForm {
