--- a/src/components/Profile/MyProfile/ProfileFormData.module.css
+++ b/src/components/Profile/MyProfile/ProfileFormData.module.css
@@ -1,4 +1,7 @@
 .form {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 1rem;
+    border-top: 1px solid var(--secondary-text-color);
 }
