--- a/src/components/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo.module.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Rowdies:wght@300&family=Saira:wght@300;400&display=swap');
-
 .background__profile {
     position: relative;
     left: 50%;
@@ -10,27 +8,24 @@
     height: 24rem;
     transform: translateX(-50%);
 }
+
 .wrapperProfile {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 0 5rem;
+    flex-wrap: wrap;
 }
+
 .profile {
-    /*position: relative;*/
-    display: flex;
-    /*grid-template-areas:*/
-    /*"A A A B B B B B B B";*/
-    flex-direction: row;
-    align-items: end;
-    /*justify-content: center;*/
-    justify-items: center;
-    /*left: 50%;*/
+    display: grid;
+    grid-template-columns: auto 5rem;
+    grid-template-areas:
+    "A A A A A B B B"
+    "C C C C C D D D";
+    grid-column-gap: 1rem;
     transform: translateY(-5rem);
-    /*width: 92%;*/
-    gap: 2rem;
-    /*padding-left: 4rem;*/
 }
 
 .avatar {
@@ -42,18 +37,56 @@
 }
 
 .description {
+    grid-area: B;
     padding-bottom: 1.5rem;
+    align-self: end;
 }
+
 .description h3 {
     font-family: "Saira", "Roboto", sans-serif;
     font-weight: 800;
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: var(--primary-text-color)
 }
+
+.moreDetails {
+    grid-area: D;
+}
+
+.btnMoreDetails {
+    font-family: Saira, sans-serif;
+    font-size: 1.1rem;
+    border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 0.6rem;
+    color: var(--secondary-text-color);
+    background-color: var(--foreground-color);
+}
+
+.btnMoreDetails:hover {
+    cursor: pointer;
+    text-decoration: var(--secondary-text-color) underline;
+    transition: ease 0.1s;
+}
+
+.btnMoreDetails svg {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.btnMoreDetails svg g {
+    fill: var(--secondary-text-color)
+}
+
+/* Button Edit Profile*/
 
 .editProfile {
     transform: translateY(-1rem)
 }
+
 .btnEditProfile {
     width: 12rem;
     height: 4rem;
