--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Rowdies:wght@300&family=Saira:wght@300;400&display=swap');
+
 [data-theme=light] {
   --background-color: #f0f0f0;
   --foreground-color: #faf9f9;
-  --primary-text-color: #0f0f0f;
+  --primary-text-color: #313131;
   --secondary-text-color: #c5c4c4;
-  --third-color-text: #9deee7;
+  --third-text-color: #abaaaa;
+  --span-text-color: #85c9c4;
   --backlight-text-color: #7777f3;
   --first-gradient: linear-gradient(#c78be8, #61eade);
   --first-btn-color: #cd9fe7;
@@ -17,7 +20,9 @@
   --background-color: #2f2f2f;
   --foreground-color: #282828;
   --primary-text-color: #f0f0f0;
-  --secondary-text-color: #efeeee;
+  --secondary-text-color: #8a8888;
+  --third-text-color: #8a8888;
+  --span-text-color: #ee925d;
   --backlight-text-color: #8282de;
   --third-color-text: #e19251;
   --first-gradient: linear-gradient(#f1c34d, #da3933);
