--- a/src/components/common/Input/InputChangePhoto.module.css
+++ b/src/components/common/Input/InputChangePhoto.module.css
@@ -11,14 +11,20 @@
 .label {
     width: 180px;
     height: 50px;
-    border-radius: 4px;
+    border-radius: 1rem;
     text-align: center;
     cursor: pointer;
-    display: block;
-    font: 14px/50px Tahoma;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Saira, sans-serif;
+    font-size: 1.2rem;
+    font-weight: 700;
     transition: all 0.18s ease-in-out;
-    border: 1px solid #333;
-    color: #333;
+    border: none;
+    color: var(--primary-text-color);
+    background-color: var(--background-color);
+    /*text-align: center;*/
     /*grid-area: C;*/
 }
 
