--- a/src/components/common/ModalWindow/ModalWindow.module.css
+++ b/src/components/common/ModalWindow/ModalWindow.module.css
@@ -1,5 +1,5 @@
 .modalWindow {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -61,6 +61,7 @@ h1 {
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(3px);
     z-index: 2;
+    overflow: hidden;
 }
 
 
