--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -4,5 +4,7 @@
     align-items: center;
     gap: 2rem;
     padding: 3rem 0;
+    background-color: var(--foreground-color);
+    border-radius: 2rem;
 }
 
