--- a/src/components/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo.module.css
@@ -41,6 +41,7 @@
     border-radius: 10rem;
     border: var(--foreground-color) 0.4rem solid;
     grid-area: A;
+    background-color: var(--foreground-color);
 }
 
 .description {
