--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,10 +1,36 @@
-.wrapperUsers {
+.usersContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--background-color);
+    border-radius: 2rem;
+    padding: 0 0 3rem 0;
+}
+
+.header {
+    position: relative;
+    width: 100%;
+    height: 8rem;
+    background-color: var(--foreground-color);
+    border-radius: 1rem;
+}
+
+.header h2 {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    transform: translateY(-50%);
+    font-size: 2.5rem;
+}
+
+.usersContainer__users {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
     gap: 2rem;
     padding: 3rem 0;
-    background-color: var(--foreground-color);
-    border-radius: 2rem;
+    width: 100%;
 }
 
