--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@
   --second-btn-color: #bb78e0;
   --third-btn-color: #9deee7;
   --third-btn-hover: #80e5dc;
-  --btn-color-shadow: rgba(189, 108, 218, 0.4)
+  --btn-color-shadow: rgba(189, 108, 218, 0.4);
+  --btn-active: #61eade;
+  --btn-disactive: #c78be8
 }
 
 [data-theme=dark] {
@@ -30,7 +32,9 @@
   --second-btn-color: #f18446;
   --third-btn-color: #e19251;
   --third-btn-hover: #f18446;
-  --btn-color-shadow: rgba(145, 86, 17, 0.4)
+  --btn-color-shadow: rgba(145, 86, 17, 0.4);
+  --btn-active: #ee8a50;
+  --btn-disactive: #da4e2e;
 }
 
 body {
