--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,12 @@
 .App {
     min-height: 100vh;
     background-color: var(--background-color);
+    transition: all ease 0.1s;
 }
 body.lock {
-    /*background-color: red;*/
     overflow: hidden;
 }
 .appWrapper {
-    /*position: relative;*/
     display: grid;
     grid-template-columns: 2.5fr 9fr;
     gap: 2rem;
@@ -21,8 +20,6 @@ body.lock {
         "h h"
         "n c";
     width: 97vw;
-    /*left: 50%;*/
-    /*transform: translateX(-50%);*/
     margin: 0 auto;
 }
 
@@ -34,7 +31,7 @@ body.lock {
     background-color: var(--background-color);
     border-radius: 2rem;
     /*position: relative;*/
-    color: var(--primary-text-color)
+    color: var(--primary-text-color);
 }
 
 .appWrapper__nav {
@@ -51,5 +48,6 @@ body.lock {
     border-radius: 2rem;
     padding: 1rem;
     height: 23rem;
+    transition: all ease 0.1s;
 }
 
