--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem ;
+    transition: all ease 0.1s;
 }
 
 .logoContainer {
