--- a/src/components/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo.module.css
@@ -1,6 +1,7 @@
 .sectionProfile {
     background-color: var(--foreground-color);
     border-radius: 2rem;
+    transition: all ease 0.1s;
 
 }
 
@@ -13,6 +14,7 @@
     object-fit: cover;
     height: 24rem;
     transform: translateX(-50%);
+    transition: all ease 0.1s;
 }
 
 .wrapperProfile {
@@ -42,6 +44,8 @@
     border: var(--foreground-color) 0.4rem solid;
     grid-area: A;
     background-color: var(--foreground-color);
+    transition: all ease 0.1s;
+
 }
 
 .description {
