--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -13,6 +13,7 @@
     height: 8rem;
     background-color: var(--foreground-color);
     border-radius: 1rem;
+    transition: all ease 0.1s;
 }
 
 .header h2 {
