--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     background-color: var(--foreground-color);
     border-radius: 2rem;
+
 }
 
 .title {
@@ -15,17 +16,20 @@
 }
 .form {
     position: relative;
-    /*display: flex;*/
+    display: flex;
     /*align-items: center;*/
-    /*flex-direction: column;*/
-    gap: 1.5rem;
+    flex-direction: column;
+    gap: 1rem;
     left: 50%;
     transform: translateX(-50%);
     width: 50%;
-    padding: 2rem
+    padding: 2rem;
+
 }
 
 .formError {
+    padding-bottom: 1rem;
+    text-align: center;
     color: #ea6a6a;
 }
 
