--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,31 @@
 .header {
+    /*position: fixed;*/
+    width: 100%;
     height: 5rem;
     background-color: var(--foreground-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem ;
-    transition: all ease 0.1s;
+    transition: all ease 0.5s;
+    z-index: 10;
+
+}
+
+.sticky {
+    position: fixed;
+    transition: all 0.5s ease;
+    animation: smoothScroll 1s forwards
+}
+
+@keyframes smoothScroll {
+    0% {
+        transform: translateY(-142px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
 }
 
 .logoContainer {
