useDispatch useSelector for UsersPage, MaterialUI/Skeleton for UsersPage

--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,5 +1,8 @@
 .usersContainer {
     display: flex;
+    /*position: relative;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
     flex-direction: column;
     align-items: center;
     background-color: var(--background-color);
