--- a/src/assets/svg/PreloaderIcon/PreloaderIcon.module.css
+++ b/src/assets/svg/PreloaderIcon/PreloaderIcon.module.css
@@ -2,6 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    /*top: 50%;*/
     background: var(--background-color);
     margin: auto;
     display: block;
