--- a/src/components/common/Preloader/Preloader.module.css
+++ b/src/components/common/Preloader/Preloader.module.css
@@ -1,5 +1,8 @@
 .preloaderDiv {
     position: relative;
+    /*left: 50%;*/
+    /*top: 50%;*/
+    /*transform: translate(-50%, -50%);*/
     width: 100%;
     height: 100%;
     background-color: var(--background-color);
